--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="topnav">
-            <a class="active" href="../index.html"><img src="" alt="Logo"></a>
+            <a class="active" href=""><img src="" alt="Logo"></a>
             <div class="topnav-right">
                 <a href="pages/about.html">About</a>
                 <a href="pages/portfolio.html">Portfolio</a>
@@ -26,7 +26,7 @@
             <h1>Title Landing Page</h1>
         </div>
         <div id="LP-why">
-            <h2>Subtitle 1: Why</h2>
+            <h2>Subtitle 1: Services</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci amet cum deleniti, eaque magni maxime
                 nobis placeat sunt suscipit. Esse et libero odit optio placeat tempora. Adipisci assumenda, ipsam?
                 Iste?</p>
