Challenge 1 - 1st Sent

--- a/index.html
+++ b/index.html
@@ -10,77 +10,36 @@
 
 <body>
     <header>
-        <div class="topnav">
-            <a class="active" href=""><img src="" alt="Logo"></a>
-            <div class="topnav-right">
-                <a href="pages/about.html">About</a>
-                <a href="pages/portfolio.html">Portfolio</a>
-                <a href="pages/blog.html">Blog</a>
-                <a href="pages/contact.html">Contact</a>
-            </div>
-        </div>
+        <nav>
+            <ul>
+                <li><a class="active" href="./index.html"><img src="#" alt="Logo"></a></li>
+                <li><a href="./pages/about.html">About</a></li>
+                <li><a href="./pages/portfolio.html">Portfolio</a></li>
+                <li><a href="./pages/blog.html">Blog</a></li>
+                <li><a href="./pages/contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <div id="LP-beginning">
-            <h1>Title Landing Page</h1>
+        <div>
+            <h1>Header 1</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque impedit nemo nobis pariatur placeat rem temporibus tenetur totam? Animi asperiores consequatur, facere fuga fugiat nesciunt sapiente soluta. Rerum, vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci animi asperiores at, cum debitis distinctio, eius eum excepturi laudantium nam quae quasi qui quia, quod repellendus sed suscipit totam vel. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium delectus dignissimos dolorem fugiat id impedit incidunt, inventore mollitia nemo obcaecati, optio placeat qui quia repellat ut vel vitae voluptatibus voluptatum? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dignissimos earum, eos ex facere iste iure iusto nam numquam soluta tempora, vitae! Distinctio mollitia non numquam odit repudiandae totam ut! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, placeat, reprehenderit? Ab aliquid, dignissimos in ipsa, iste maiores non porro quaerat quisquam recusandae reiciendis tempora voluptatum. Cum et sequi veritatis.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam architecto assumenda debitis dignissimos ducimus esse fuga illo neque, sit tenetur! Architecto doloremque illo quasi recusandae. Eius itaque quos unde voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid enim facere nulla possimus similique! Accusantium beatae consectetur cupiditate delectus dicta dolore, earum fuga laboriosam magnam, magni natus, neque quisquam voluptatem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cumque deleniti ea eaque eum excepturi illo maxime molestias mollitia nulla obcaecati officiis pariatur perferendis quae quibusdam, quisquam totam velit veritatis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam at commodi deleniti enim libero, provident quo tempora ut velit voluptatem? Deserunt eligendi fuga quo quos reprehenderit! Deserunt excepturi obcaecati pariatur? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur eius maxime quasi, quia quos sunt tempore tenetur vel vero? Alias aperiam dicta eum eveniet ipsa laboriosam minima temporibus velit, voluptatum!</p>
+            <button>CTA</button>
         </div>
-        <div id="LP-why">
-            <h2>Subtitle 1: Services</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci amet cum deleniti, eaque magni maxime
-                nobis placeat sunt suscipit. Esse et libero odit optio placeat tempora. Adipisci assumenda, ipsam?
-                Iste?</p>
-        </div>
-        <div id="LP-portfolio">
-            <h2>Subtitle 2: Portfolio</h2>
-            <div id="LP-data-science">
-                <h3>Inner 1: Data Portfolio Highlight</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem enim nemo non omnis pariatur sit
-                    voluptatem. Aliquid blanditiis consectetur cum eos, illum labore minus, nisi nobis, nostrum
-                    praesentium velit vero?</p>
-            </div>
-            <div id="LP-web-development">
-                <h3>Inner 2: FS Dev Portfolio Highlight</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda autem harum hic iure laborum
-                    numquam quidem quis, tempora tempore veniam veritatis vitae. Accusantium dolor incidunt ipsum qui
-                    repudiandae voluptatibus!</p>
-            </div>
-        </div>
-        <div id="LP-blog">
-            <h2>Subtitle 3: Blog</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A autem corporis ducimus earum enim ex illo
-                ipsam laboriosam libero, nisi non perferendis quidem quisquam rem rerum sed suscipit tenetur, unde.</p>
-        </div>
-        <div id="LP-contact">
-            <h2>Subtitle 4: Contact</h2>
-            <form action="mailto:contact@sebaminaya.com" method="get" enctype="text/plain">
-                <div>
-                    <label for="name">Name:
-                        <input type="text" name="name" id="name" />
-                    </label>
-                </div>
-                <div>
-                    <label for="email">Email:
-                        <input type="text" name="email" id="email" />
-                    </label>
-                </div>
-                <div>
-                    <label>Comments:</label>
-                    <br />
-                    <label>
-                        <textarea name="comments" rows="12" cols="35">Tell me what you need.</textarea>
-                    </label>
-                </div>
-                <div>
-                    <input type="submit" name="submit" value="Send" />
-                    <input type="reset" name="reset" value="Clear Form" />
-                </div>
-            </form>
+        <div>
+            <h2>Header 2</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae dignissimos maiores nemo velit voluptas? Accusamus, aliquam delectus deserunt doloribus eveniet explicabo in ipsum laudantium nihil nobis, nulla officiis quae rem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae cum dolorem perspiciatis. Adipisci aperiam, beatae dolores hic impedit in maxime officiis repellendus veniam voluptate. Accusantium est nobis nulla perferendis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt eum ex facere iste odit quas, quod similique. Culpa doloribus facilis nesciunt nostrum quisquam? Debitis eum facere hic ipsum saepe? In. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid consequatur cupiditate debitis dicta distinctio, dolores dolorum esse, est facere harum natus nostrum obcaecati officia perspiciatis qui quisquam reiciendis, sunt vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aut autem culpa iusto modi porro quis, repudiandae voluptate. Ad animi asperiores at aut delectus ducimus fugit, molestiae quod ratione ut.</p>
         </div>
     </main>
 
     <footer>
-        <p style="color: white">© 2021 Sebastian Minaya</p>
+        <a href="#"><img id="rss-logo-insta" src="images/instagram.png" alt="insta logo"></a>
+        <a href="#"><img id="rss-logo-linkedin" src="images/linkedin.png" alt="linkedin logo"></a>
+        <br>
+        <a href="pages/contact.html">Contact</a>
+        <p>© 2021 Sebastian Minaya</p>
     </footer>
 </body>
 
