--- a/pages/about.html
+++ b/pages/about.html
@@ -9,25 +9,29 @@
 </head>
 
 <body>
-<header>
-    <div class="topnav">
-        <a class="active" href="../index.html"><img src="" alt="Logo"></a>
-        <div class="topnav-right">
-            <a href="../pages/about.html">About</a>
-            <a href="../pages/portfolio.html">Portfolio</a>
-            <a href="../pages/blog.html">Blog</a>
-            <a href="../pages/contact.html">Contact</a>
-        </div>
-    </div>
-</header>
+    <header>
+        <nav>
+            <ul>
+                <li><a class="active" href="../index.html"><img src="#" alt="Logo"></a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
+                <li><a href="./blog.html">Blog</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<main>
+    <main>
 
-</main>
+    </main>
 
-<footer>
-    <p style="color: white">© 2021 Sebastian Minaya</p>
-</footer>
+    <footer>
+        <a href="#"><img id="rss-logo-insta" src="../images/instagram.png" alt="insta logo"></a>
+        <a href="#"><img id="rss-logo-linkedin" src="../images/linkedin.png" alt="linkedin logo"></a>
+        <br>
+        <a href="./contact.html">Contact</a>
+        <p>© 2021 Sebastian Minaya</p>
+    </footer>
 </body>
 
 </html>
