--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,25 +9,57 @@
 </head>
 
 <body>
-<header>
-    <div class="topnav">
-        <a class="active" href="../index.html"><img src="" alt="Logo"></a>
-        <div class="topnav-right">
-            <a href="../pages/about.html">About</a>
-            <a href="../pages/portfolio.html">Portfolio</a>
-            <a href="../pages/blog.html">Blog</a>
-            <a href="../pages/contact.html">Contact</a>
+    <header>
+        <nav>
+            <ul>
+                <li><a class="active" href="../index.html"><img src="#" alt="Logo"></a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
+                <li><a href="./blog.html">Blog</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div>
+            <h2>My Current Location</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7802.416616397408!2d-76.94793361610107!3d-12.09788725442607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2spe!4v1638936512349!5m2!1sen!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
-    </div>
-</header>
 
-<main>
+        <br>
 
-</main>
+        <div>
+            <form action="#">
 
-<footer>
-    <p style="color: white">© 2021 Sebastian Minaya</p>
-</footer>
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+                <br><br>
+
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+                <br><br>
+
+                <label for="subject">Subject</label>
+                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+                <br><br>
+
+                <input type="submit" value="Submit">
+
+            </form>
+        </div>
+    </main>
+
+    <footer>
+        <a href="#"><img id="rss-logo-insta" src="../images/instagram.png" alt="insta logo"></a>
+        <a href="#"><img id="rss-logo-linkedin" src="../images/linkedin.png" alt="linkedin logo"></a>
+        <br>
+        <a href="./contact.html">Contact</a>
+        <p>© 2021 Sebastian Minaya</p>
+    </footer>
 </body>
 
 </html>
