--- a/index.html
+++ b/index.html
@@ -11,22 +11,27 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a class="active" href="./index.html"><img src="#" alt="Logo"></a></li>
-                <li><a href="./pages/about.html">About</a></li>
-                <li><a href="./pages/portfolio.html">Portfolio</a></li>
-                <li><a href="./pages/blog.html">Blog</a></li>
-                <li><a href="./pages/contact.html">Contact</a></li>
+            <ul class="nav-bar">
+                <li id="logo" class="nav-button"><a href="./index.html"><img src="#" alt="Logo"></a></li>
+                <li class="nav-button"><a href="./pages/about.html">About</a></li>
+                <li class="nav-button"><a href="./pages/portfolio.html">Portfolio</a></li>
+                <li class="nav-button"><a href="./pages/blog.html">Blog</a></li>
+                <li class="nav-button"><a href="./pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <div>
-            <h1>Header 1</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque impedit nemo nobis pariatur placeat rem temporibus tenetur totam? Animi asperiores consequatur, facere fuga fugiat nesciunt sapiente soluta. Rerum, vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci animi asperiores at, cum debitis distinctio, eius eum excepturi laudantium nam quae quasi qui quia, quod repellendus sed suscipit totam vel. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium delectus dignissimos dolorem fugiat id impedit incidunt, inventore mollitia nemo obcaecati, optio placeat qui quia repellat ut vel vitae voluptatibus voluptatum? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dignissimos earum, eos ex facere iste iure iusto nam numquam soluta tempora, vitae! Distinctio mollitia non numquam odit repudiandae totam ut! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, placeat, reprehenderit? Ab aliquid, dignissimos in ipsa, iste maiores non porro quaerat quisquam recusandae reiciendis tempora voluptatum. Cum et sequi veritatis.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam architecto assumenda debitis dignissimos ducimus esse fuga illo neque, sit tenetur! Architecto doloremque illo quasi recusandae. Eius itaque quos unde voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid enim facere nulla possimus similique! Accusantium beatae consectetur cupiditate delectus dicta dolore, earum fuga laboriosam magnam, magni natus, neque quisquam voluptatem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cumque deleniti ea eaque eum excepturi illo maxime molestias mollitia nulla obcaecati officiis pariatur perferendis quae quibusdam, quisquam totam velit veritatis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam at commodi deleniti enim libero, provident quo tempora ut velit voluptatem? Deserunt eligendi fuga quo quos reprehenderit! Deserunt excepturi obcaecati pariatur? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur eius maxime quasi, quia quos sunt tempore tenetur vel vero? Alias aperiam dicta eum eveniet ipsa laboriosam minima temporibus velit, voluptatum!</p>
-            <button>CTA</button>
+        <div id="lp-headline">
+            <div id="lp-headline-text">
+                <h1>Header 1</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque impedit nemo nobis pariatur placeat rem temporibus tenetur totam? Animi asperiores consequatur, facere fuga fugiat nesciunt sapiente soluta. Rerum, vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci animi asperiores at, cum debitis distinctio, eius eum excepturi laudantium nam quae quasi qui quia, quod repellendus sed suscipit totam vel.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam architecto assumenda debitis dignissimos ducimus esse fuga illo neque, sit tenetur! Architecto doloremque illo quasi recusandae. Eius itaque quos unde voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid enim facere nulla possimus similique! Accusantium beatae consectetur cupiditate delectus dicta dolore, earum fuga laboriosam magnam, magni natus, neque quisquam voluptatem. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <button id="lp-headline-cta">CTA</button>
+            </div>
+            <div id="lp-headline-media">
+                <img src="./images/1.png" alt="Headline Image">
+            </div>
         </div>
         <div>
             <h2>Header 2</h2>
@@ -35,11 +40,37 @@
     </main>
 
     <footer>
-        <a href="#"><img id="rss-logo-insta" src="images/instagram.png" alt="insta logo"></a>
-        <a href="#"><img id="rss-logo-linkedin" src="images/linkedin.png" alt="linkedin logo"></a>
-        <br>
-        <a href="pages/contact.html">Contact</a>
-        <p>© 2021 Sebastian Minaya</p>
+        <div id="footer-menu">
+            <a href="">About</a>
+            <a href="">Portfolio</a>
+            <a href="">Blog</a>
+            <a href="">Contact</a>
+        </div>
+        <div>
+            <form action="#">
+
+                <label for="fname">First Name</label> <br>
+                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+                <br><br>
+
+                <label for="lname">Last Name</label> <br>
+                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+                <br><br>
+
+                <label for="subject">Subject</label> <br>
+                <textarea id="subject" name="subject" placeholder="Write something.."></textarea>
+
+                <br><br>
+
+                <input type="submit" value="Submit">
+
+            </form>
+            <a href="#"><img id="rss-logo-insta" src="#" alt="insta logo"></a>
+            <a href="#"><img id="rss-logo-linkedin" src="#" alt="linkedin logo"></a>
+            <p>© 2021 Sebastian Minaya</p>
+        </div>
     </footer>
 </body>
 
