1st Project Delivery - All Website View Structure Finished

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <header>
         <nav>
             <ul class="nav-bar">
-                <li id="logo" class="nav-button"><a href="./index.html"><img src="#" alt="Logo"></a></li>
-                <li class="nav-button"><a href="./pages/about.html">About</a></li>
-                <li class="nav-button"><a href="./pages/portfolio.html">Portfolio</a></li>
-                <li class="nav-button"><a href="./pages/blog.html">Blog</a></li>
-                <li class="nav-button"><a href="./pages/contact.html">Contact</a></li>
+                <li id="logo" class="nav-button"><a href="#"><img src="#" alt="Logo"></a></li>
+                <li class="nav-button"><a href="pages/about.html">About</a></li>
+                <li class="nav-button"><a href="pages/portfolio.html">Portfolio</a></li>
+                <li class="nav-button"><a href="pages/services.html">Services</a></li>
+                <li class="nav-button"><a href="pages/blog.html">Blog</a></li>
+                <li class="nav-button"><a href="pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -24,18 +25,25 @@
     <main>
         <div id="lp-headline">
             <div id="lp-headline-text">
-                <h1>Header 1</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque impedit nemo nobis pariatur placeat rem temporibus tenetur totam? Animi asperiores consequatur, facere fuga fugiat nesciunt sapiente soluta. Rerum, vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci animi asperiores at, cum debitis distinctio, eius eum excepturi laudantium nam quae quasi qui quia, quod repellendus sed suscipit totam vel.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam architecto assumenda debitis dignissimos ducimus esse fuga illo neque, sit tenetur! Architecto doloremque illo quasi recusandae. Eius itaque quos unde voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid enim facere nulla possimus similique! Accusantium beatae consectetur cupiditate delectus dicta dolore, earum fuga laboriosam magnam, magni natus, neque quisquam voluptatem. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <button id="lp-headline-cta">CTA</button>
-            </div>
-            <div id="lp-headline-media">
-                <img src="./images/1.png" alt="Headline Image">
+                <h1>Developing the future by challenging the present.</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid dolor incidunt maiores molestiae nobis nulla pariatur perferendis rerum sunt velit. Accusantium expedita magni mollitia non sequi tempora? Accusantium, ipsum, quos!</p>
+                <button>Check my services.</button>
             </div>
         </div>
-        <div>
-            <h2>Header 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae dignissimos maiores nemo velit voluptas? Accusamus, aliquam delectus deserunt doloribus eveniet explicabo in ipsum laudantium nihil nobis, nulla officiis quae rem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae cum dolorem perspiciatis. Adipisci aperiam, beatae dolores hic impedit in maxime officiis repellendus veniam voluptate. Accusantium est nobis nulla perferendis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt eum ex facere iste odit quas, quod similique. Culpa doloribus facilis nesciunt nostrum quisquam? Debitis eum facere hic ipsum saepe? In. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid consequatur cupiditate debitis dicta distinctio, dolores dolorum esse, est facere harum natus nostrum obcaecati officia perspiciatis qui quisquam reiciendis, sunt vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aut autem culpa iusto modi porro quis, repudiandae voluptate. Ad animi asperiores at aut delectus ducimus fugit, molestiae quod ratione ut.</p>
+        <div id="lp-portfolio">
+            <h2>Trust is not built based on anything, right?</h2>
+            <button id="lp-portfolio-cta">Check my portfolio.</button>
+        </div>
+        <div id="lp-project-hl">
+            <h2>Project Highlight</h2>
+            <img src="#" alt="Project Image">
+            <h3>ML Pipeline of Disaster Response Tweets</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid dolor incidunt maiores molestiae nobis nulla pariatur perferendis rerum sunt velit. Accusantium expedita magni mollitia non sequi tempora? Accusantium, ipsum, quos!</p>
+            <button id="lp-portfolio-cta">Check this project.</button>
+        </div>
+        <div id="lp-contact">
+            <h1>I would love to work with you.</h1>
+            <button>Contact me</button>
         </div>
     </main>
 
@@ -43,33 +51,14 @@
         <div id="footer-menu">
             <a href="">About</a>
             <a href="">Portfolio</a>
+            <a href="">Services</a>
             <a href="">Blog</a>
             <a href="">Contact</a>
         </div>
         <div>
-            <form action="#">
-
-                <label for="fname">First Name</label> <br>
-                <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-                <br><br>
-
-                <label for="lname">Last Name</label> <br>
-                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-                <br><br>
-
-                <label for="subject">Subject</label> <br>
-                <textarea id="subject" name="subject" placeholder="Write something.."></textarea>
-
-                <br><br>
-
-                <input type="submit" value="Submit">
-
-            </form>
+            <p>© 2021 Sebastian Minaya</p>
             <a href="#"><img id="rss-logo-insta" src="#" alt="insta logo"></a>
             <a href="#"><img id="rss-logo-linkedin" src="#" alt="linkedin logo"></a>
-            <p>© 2021 Sebastian Minaya</p>
         </div>
     </footer>
 </body>
