--- a/pages/about.html
+++ b/pages/about.html
@@ -11,26 +11,49 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a class="active" href="../index.html"><img src="#" alt="Logo"></a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="./blog.html">Blog</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+            <ul class="nav-bar">
+                <li id="logo" class="nav-button"><a href="../index.html"><img src="#" alt="Logo"></a></li>
+                <li class="nav-button"><a href="#">About</a></li>
+                <li class="nav-button"><a href="portfolio.html">Portfolio</a></li>
+                <li class="nav-button"><a href="services.html">Services</a></li>
+                <li class="nav-button"><a href="blog.html">Blog</a></li>
+                <li class="nav-button"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-
+        <div id="about-father">
+            <section id="greet">
+                <h1>Nice to see you here! I’m Seba.</h1>
+            </section>
+            <section id="img">
+                <img src="#" alt="Profile Picture">
+            </section>
+            <section id="desc">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid dolor incidunt maiores molestiae nobis nulla pariatur perferendis rerum sunt velit. Accusantium expedita magni mollitia non sequi tempora? Accusantium, ipsum, quos!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid dolor incidunt maiores molestiae nobis nulla pariatur perferendis rerum sunt velit. Accusantium expedita magni mollitia non sequi tempora? Accusantium, ipsum, quos!</p>
+            </section>
+            <section id="cv">
+                <h1>Have a look at my curriculum.</h1>
+                <button>Check it here.</button>
+            </section>
+        </div>
     </main>
 
     <footer>
-        <a href="#"><img id="rss-logo-insta" src="../images/instagram.png" alt="insta logo"></a>
-        <a href="#"><img id="rss-logo-linkedin" src="../images/linkedin.png" alt="linkedin logo"></a>
-        <br>
-        <a href="./contact.html">Contact</a>
-        <p>© 2021 Sebastian Minaya</p>
+        <div id="footer-menu">
+            <a href="">About</a>
+            <a href="">Portfolio</a>
+            <a href="">Services</a>
+            <a href="">Blog</a>
+            <a href="">Contact</a>
+        </div>
+        <div>
+            <p>© 2021 Sebastian Minaya</p>
+            <a href="#"><img id="rss-logo-insta" src="#" alt="insta logo"></a>
+            <a href="#"><img id="rss-logo-linkedin" src="#" alt="linkedin logo"></a>
+        </div>
     </footer>
 </body>
 
