Challenge 3 - 1st Sent - Media Query Update (460px view)

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -43,7 +43,7 @@
             <section id="contact">
                 <div>
                     <h1>Let’s create something amazing.</h1>
-                    <button>portfolio.htmlContact me.</button>
+                    <button>Contact me.</button>
                 </div>
             </section>
         </div>
