--- a/pages/portfolio/lending_case.html
+++ b/pages/portfolio/lending_case.html
@@ -37,8 +37,8 @@
                 <img src="#" alt="ML Pipeline">
             </section>
             <section class="project-links">
-                <a id="past-project" href="#"><h2><- ML Pipeline of Disaster Response Tweets</h2></a>
-                <a id="next-project" href="#"></a>
+                <a id="past-project" href="ml_pipeline.html"><h2><- ML Pipeline of Disaster Response Tweets</h2></a>
+                <a id="next-project" href="lending_case.html"></a>
             </section>
         </div>
     </main>
