--- a/pages/portfolio/ml_pipeline.html
+++ b/pages/portfolio/ml_pipeline.html
@@ -37,8 +37,8 @@
                 <img src="#" alt="ML Pipeline">
             </section>
             <section class="project-links">
-                <a id="past-project" href="#"></a>
-                <a id="next-project" href="#"><h2>Lending Club Case Study -></h2></a>
+                <a id="past-project" href="ml_pipeline.html"></a>
+                <a id="next-project" href="lending_case.html"><h2>Lending Club Case Study -></h2></a>
             </section>
         </div>
     </main>
